--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <textarea id="sinopse" required></textarea>
     </div>
 
+    <button type="submit">Adicionar Filme</button>
+  </form>
 
 </body>
 </html>
