--- a/index.html
+++ b/index.html
@@ -26,5 +26,12 @@
     <button type="submit">Adicionar Filme</button>
   </form>
 
+ <hr>
+   
+    <h2>Minha Lista de Filmes</h2>
+
+ 
+
+
 </body>
 </html>
