--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cátalogo de Filmes </title>
@@ -30,8 +31,34 @@
    
     <h2>Minha Lista de Filmes</h2>
 
- 
+   <div id="lista-filmes">
+      <p>Nenhum filme cadastrado ainda.</p>
+   </div>
 
+   <script>
+      // 1. ARMAZENAMENTO DE DADOS
+      // 2. Array global que irá guardar todos os filmes como objetos.
+      // Ex: [{ título: 'Filme X', sinopse: 'Sinopse Y' }]
+      const catalogo = [];
+
+      // 2. CAPTURA DE ELEMENTOS DO DOM (Document Object Model)
+      // Capturamos os elementos HTML que vamos interagir, usando seus IDs.
+      const form = document.getElementById('cadastro-filme');
+      const listaFilmesContainer = document.getElementById('lista-filmes');
+
+      //----------------------------------------------------------------
+      // FUNÇÃO DE REMOÇÃO
+      //----------------------------------------------------------------
+      /**
+       *Remove um filme do array de dados e do elemento HTML na tela.
+       * @param {number} indice - A posição do filme no array 'catálogo'.
+       * @param {HTMLElement} elementoDOM - O elemento <div> do filme a ser removido da tela.
+       */
+    function removerFilme(indice, elementoDOM) {
+        // A. REMOÇÃO DO ARRAY (Lógica) 
+        ]
+    }
+   </script>
 
 </body>
 </html>
