--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
        */
     function removerFilme(indice, elementoDOM) {
         // A. REMOÇÃO DO ARRAY (Lógica) 
-        
+        // splice(indice, 1) remove 1 elemento a partir da posição 'indice'.
+        // isso atualiza o array 'catalogo'.
+        catalogo.splice(indice, 1);
     }
    </script>
 
