--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
       // Ao clicar, chamamos a função, passando o indice (posição) e a própria <div> (filmeDiv).
      removerFilme(indice, filmeDiv);
  });
+    
+    //C. ANEXAR ELEMENTOS (appendChild)
+    // Monta a estrutura hierárquica:
+    
 }
 
    </script>
