--- a/index.html
+++ b/index.html
@@ -1,72 +1,61 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Catálogo de Filmes - Fase 1: Cadastro Manual (DOM Básico)</title>
-
-<link rel="stylesheet" href="style.css">
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Catálogo de Filmes - Fase 1: Cadastro Manual (DOM Básico)</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <h1>Catálogo de Filmes</h1>
 
 <form id="cadastro-filme">
-<h2>Adicionar Novo Filme (Busca por API)</h2>
-<div>
-<label for="titulo">Título do Filme:</label>
-<input type="text" id="titulo" required>
-</div>
-<div>
-<label for="sinopse">Sinopse:</label>
-<textarea id="sinopse" required></textarea>
-</div>
+    <h2>Adicionar Novo Filme (Busca por API)</h2>
+    <div>
+        <label for="titulo">Título do Filme:</label>
+        <input type="text" id="titulo" required>
+    </div>
+    <div>
+        <label for="sinopse">Sinopse:</label>
+        <textarea id="sinopse" required></textarea>
+    </div>
 
-<button type="submit">Adicionar Filme</button>
+    <button type="submit">Adicionar Filme</button>
 </form>
 <hr>
 
 <h2>Minha Lista De Filmes</h2>
 
 <div id="lista-filmes">
-<p>Nenhum filme cadastrado ainda.</p>
+    <p>Nenhum filme cadastrado ainda.</p>
 </div>
 
 <script>
-// A CHAVE SECRETA DA API OMDb (Substitua esta sting pela sua chave real!)
-const API KEY = '72dcf75a';
+// A CHAVE SECRETA DA API OMDb (Substitua esta string pela sua chave real!)
+const API_KEY = '72dcf75a'; 
 
 // 1. ARMAZENAMENTO DE DADOS
 const catalogo = [];
 
 // 2. CAPTURA DE ELEMENTOS DO DOM (Document Object Model).
 const form = document.getElementById('cadastro-filme');
-const titulInput = document.getElementById('titulo');
+const tituloInput = document.getElementById('titulo');
 const listaFilmesContainer = document.getElementById('lista-filmes');
 
 // ------------------------------------------------
-// // FUNÇÃO DE REMOÇÃO
+// FUNÇÃO DE REMOÇÃO
 // ------------------------------------------------
 function removerFilme(indice, elementoDOM) {
     catalogo.splice(indice, 1);
     elementoDOM.remove();
 
+    // Atualiza a mensagem da lista se estiver vazia
+    if (catalogo.length === 0) {
+        listaFilmesContainer.innerHTML = '<p>Nenhum filme cadastrado ainda.</p>';
+    }
 
-// A. REMOÇÃO DO ARRAY (Lógica)
-catalogo.splice(indice, 1);
-
-// B. REMOÇÃO DO DOM (Visual)
-// O método .remove() retira o elemento HTML da visualização do usuário.
-elementoDOM.remove();
-
-// Opcional: Atualiza a mensagem da lista se estiver vazia
-if (catalogo.length === 0) {
-listaFilmesContainer.innerHTML = '<p>Nenhum filme cadastrado ainda.</p>';
-}
-
-console.log(`Filme no índice ${indice} removido. Catálogo atualizado:`, catalogo);
+    console.log(`Filme no índice ${indice} removido. Catálogo atualizado:`, catalogo);
 }
 
 // -------------------------------------------------------------
@@ -74,142 +63,91 @@ console.log(`Filme no índice ${indice} removido. Catálogo atualizado:`, catalo
 // -------------------------------------------------------------
 function renderizarFilme(filme, indice) {
 
-if (catalogo.length === 1) {
-listaFilmesContainer.innerHTML = '';
-}
-
-
-const filmeDiv = document.createElement('div');
-filmeDiv.classList.add('filme-item'); 
-
-const imagemPoster = document.createElement(1div);
-imagemPoster.src = filme.poster && filme.poster !== 'N/A'
-                            ? filme.poster
-                            :'';
- imagemPoster.alt = `Poster do Filme ${filme-titulo}`;
- imagemPoster.classList.add('filme-poster');
-
- const infoDiv = document.createElement('div');
- infoDiv.classList.add ('filme-info');
-
-
-const tituloH3 = document.createElement('h3');
-tituloH3.textContent = filme.titulo;
-
-
-const sinopseP = document.createElement('p');
-sinopseP.textContent = filme.sinopse;
-
-// Cria o botão de remoção.
-const removerBotao = document.createElement('button');
-removerBotao.textContent = 'Remover';
-removerBotao.classList.add('btn-remover');
-
-// Anexa a função 'removerFilme' ao clique do botão.
-removerBotao.addEventListener('click', () => {
-    const indiceAtual = catalogo.findIndex(f => f.titulo === filme.titulo);
-    if (indiceAtual > -1) {
-    removerFilme(indiceAtual, filmeDiv);
+    if (catalogo.length === 1) {
+        listaFilmesContainer.innerHTML = '';
     }
-});
 
-//D. Montagem do DOM
- infoDiv.appendChild(tituloH3);
- infoDiv.appendChild(sinopseP);
- infoDiv.appendChild(removerBotao);
+    const filmeDiv = document.createElement('div');
+    filmeDiv.classList.add('filme-item');
 
- filmeDiv.appendChild(imagemPoster);
- FilmeDiv.appendChild(infoDiv);
- 
- listaFilmesContainer.appendChild(filmeDiv);
+    // Corrigido para a criação correta da imagem
+    const imagemPoster = document.createElement('img'); // Aqui é "img", não "div"
+    imagemPoster.src = filme.poster && filme.poster !== 'N/A' ? filme.poster : '';
+    imagemPoster.alt = `Poster do Filme ${filme.titulo}`;
+    imagemPoster.classList.add('filme-poster');
+
+    const infoDiv = document.createElement('div');
+    infoDiv.classList.add('filme-info');
+
+    const tituloH3 = document.createElement('h3');
+    tituloH3.textContent = filme.titulo;
+
+    const sinopseP = document.createElement('p');
+    sinopseP.textContent = filme.sinopse;
+
+    // Cria o botão de remoção.
+    const removerBotao = document.createElement('button');
+    removerBotao.textContent = 'Remover';
+    removerBotao.classList.add('btn-remover');
+
+    // Anexa a função 'removerFilme' ao clique do botão.
+    removerBotao.addEventListener('click', () => {
+        const indiceAtual = catalogo.findIndex(f => f.titulo === filme.titulo);
+        if (indiceAtual > -1) {
+            removerFilme(indiceAtual, filmeDiv);
+        }
+    });
+
+    // Montagem do DOM
+    infoDiv.appendChild(tituloH3);
+    infoDiv.appendChild(sinopseP);
+    infoDiv.appendChild(removerBotao);
+
+    filmeDiv.appendChild(imagemPoster);
+    filmeDiv.appendChild(infoDiv);
+
+    listaFilmesContainer.appendChild(filmeDiv);
 }
 
+// FUNÇÃO PRINCIPAL DE ADIÇÃO (Assíncrona para a API)
+async function adicionarFilme(evento) {
+    evento.preventDefault();
 
-// FUNCÃO PRINCIPAL DE ADIÇÃO (Assancrona para a API)
-   async function adicionarFilme(evento) {
-   evento.preventDefault();
+    const titulo = tituloInput.value.trim();
+    if (!titulo) return;
 
-  const titulo = tituloinput.value.trim();
-  if (!titulo) return;
+    const tituloFormatado = encodeURIComponent(titulo);
+    const url = `https://www.omdbapi.com/?apikey=${API_KEY}&t=${tituloFormatado}`; // Corrigido URL
 
-  const tituloFormatado = encodeURIComponent(titulo);
-  const url=`https://www.omdbapi.com/Papikey=${API_KEY}&t=${tituloFormatado}`;
+    try {
+        const resposta = await fetch(url);
+        const dadosDoFilme = await resposta.json();
 
-  try {
-   const resposta = await fetch(url);
-   const dadosDoFilme = await resposta.json();
+        if (dadosDoFilme.Response === "True") {
+            const novoFilme = {
+                titulo: dadosDoFilme.Title,
+                sinopse: dadosDoFilme.Plot,
+                poster: dadosDoFilme.Poster,
+            };
 
-     if (dadosDoFilme.Response === "True") {
+            catalogo.push(novoFilme);
+            renderizarFilme(novoFilme, catalogo.length - 1);
+        } else {
+            alert(`Filme não encontrado na OMDb: "${titulo}".`);
+        }
 
-     const novoFilme = {
-      titulo: dadosDoFilme.Title,
-      sinopse: dadosDoFilme.Plot,
-      poster: dadosDoFilme.Poster,
-};
+    } catch (error) {
+        alert('Ocorreu um erro ao tentar buscar o filme na API. Verifique sua chave.');
+        console.error('Erro de Fetch:', error);
+    }
 
-   catalogo.push(novoFilme);
-   renderizarFilme (novoFilme, catalogo.length - 1);
-
-  } else {
-   alert(`Filme não encontrado na OMDb: "${titulo}".`);
-  }
-   
- } catch (error) {
-    alert('Ocorreu um erro ao tentar buscar o filme na API. Verifique sus chave.');
-    console.error('Erro de Fetch:', error);
-}
-  
-  form.reset();
-}
-  // 6. ESCUTANDO O EVENTO DO FORMULARIO
-   form.addEventListener('submit', adicionarFilme);
-
-
-// Adiciona o filme montado (filmeDiv) dentro do container principal na página.
-listaFilmesContainer.appendChild(filmeDiv);
+    form.reset();
 }
 
-// ----------------------------------------------------------------------------------
-// FUNÇÃO PRINCIPAL DE ADIÇÃO (Manipulador do Formulário)
-// ----------------------------------------------------------------------------------
-/**
-* Lida com o envio do formulário, captura os dados e salva o filme.
-* @param {Event} evento - O evento de 'submit' do formulário.
-*/
-function adicionarFilme(evento) {
-// 3. Previne o recarregamento da página
-// O comportamento padrão de um formulário é recarregar a página. O preventDefault() impede isso.
-evento.preventDefault();
-
-// 4. Captura os valores dos campos
-const tituloInput = document.getElementById('titulo');
-const sinopseInput = document.getElementById('sinopse');
-
-// Cria o objeto JavaScript com os dados
-const novoFilme = {
-titulo: tituloInput.value,
-sinopse: sinopseInput.value
-};
-
-// 5. Armazena o filme no Array
-// O método .push() adiciona o novo objeto no final do array 'catalogo'.
-catalogo.push(novoFilme);
-
-// 6. Renderiza na Tela
-// Passamos o novo objeto e seu índice (que é sempre o último, ou seja, tamanho - 1)
-renderizarFilme(novoFilme, catalogo.length - 1);
-
-// 7. Limpa o formulário
-// O método .reset() limpa todos os campos do formulário para o próximo cadastro.
-form.reset();
-}
-
-
-// 8. ESCUTANDO O EVENTO DO BOTÃO/FORMULÁRIO
-// Anexamos a função 'adicionarFilme' ao evento de 'submit' do formulário.
+// 6. ESCUTANDO O EVENTO DO FORMULÁRIO
 form.addEventListener('submit', adicionarFilme);
 
-console.log("JavaScript Carregado. Pronto para iniciar o catalogo!");
+console.log("JavaScript Carregado. Pronto para iniciar o catálogo!");
 </script>
 
 </body>
