--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Catálogo de Filmes</h1>
    
     <form id="cadastro-filme">
-        <h2>Adicionar Novo Filme (Busca por API)</h2>
+        <h2>Adicionar Novo Filme</h2>
         <div>
             <label for="titulo">Título do Filme:</label>
             <input type="text" id="titulo" required>
