--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catálogo de Filmes</title>
+    <title>FILMFLIX Catálogo de Filmes VR</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <header class="header">
+       <div class="logo"> FILMFLIX</div>
+       <nav class="nav-menu">
+       <a href="#">Minha Lista</a>
+       <a href="#">Gêneros</a>
+       <a href="#">Sobre</a>
+       <button class="menu-toggle"> </button>
+</nav>
+</header>
 
     <h1>Catálogo de Filmes</h1>
    
